# maintainer-tools

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: detect-secrets.yml  pre-commit.yml
data/template_addon/: __manifest__.py
data/template_addon/static/description/: index.html
template/module/: __manifest__.py
tools/: fix_manifest_website.py  manifest.py  website.py
tools/template_addon_static/description/: index.html
