[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "doovate-maintainers-tools"
description = "Set of tools to standarize Odoo programming"
readme = "README.md"
authors = [{name = "Doovate"}]
dynamic = ["version"]
dependencies = [
    "appdirs",
    "click",
    "docutils",
    "pypandoc",  # for oca-gen-addon-readme to work with markdown fragments
    "ERPpeek",
    "freezegun",
    "github3.py>=1",
    "jinja2",
    "manifestoo-core>=1.1",
    "PyYAML",
    "polib",
    "pygments",
    "requests",
    "toml>=0.10.0",  # for oca-towncrier
    "tomli ; python_version < '3.11'",  # from 3.11 tomllib is in stdlib
    "towncrier>=21.3; python_version < '3.8'",  # for oca-towncrier
    # for oca-towncrier with MarkDow support
    "towncrier>=23.11; python_version >= '3.8'",
    "selenium",
    "twine",
    "wheel",
    "pyproject_dependencies ; python_version>='3.7'",
    "setuptools-odoo",  # for oca-gen-external-dependencies
    "whool",  # for oca-gen-external-dependencies
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
]

[project.urls]
homepage = "https://doovate.com"
repository = "https://github.com/doovate/maintainer-tools"

[project.scripts]
dv-fix-manifest-website = "tools.fix_manifest_website:main"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
